# SAGE

./: .gitignore  CMakeLists.txt  main.cpp
src/: Engine.cpp  Engine.h
src/core/: JFW_window.cpp  JFW_window.h
